Link, unlink & get apps to Policy + Swagger manifest for Get Apps + some input parameter changes
