# src/ResourceManager/Intune/Commands.Intune/RemoveIntuneiOSMAMPolicyAppCmdlet.cs
@@ -17,25 +17,24 @@ namespace Microsoft.Azure.Commands.Intune
     using System;
     using System.Management.Automation;
     using RestClient;
-    using RestClient.Models;
 
     /// <summary>
     /// A cmdlet to link an app to iOS Intune MAM policy Azure resource.
     /// </summary>
-    [Cmdlet(VerbsCommon.New, "AzureRmIntuneiOSMAMPolicyApp", SupportsShouldProcess = true), OutputType(typeof(PSObject))]
-    public sealed class NewIntuneiOSMAMPolicyAppCmdlet : IntuneBaseCmdlet
+    [Cmdlet(VerbsCommon.Remove, "AzureRmIntuneiOSMAMPolicyApp", SupportsShouldProcess = true), OutputType(typeof(PSObject))]
+    public sealed class RemoveIntuneiOSMAMPolicyAppCmdlet : IntuneBaseCmdlet
     {
         /// <summary>
         /// Gets or sets the policy id
         /// </summary>
-        [Parameter(Mandatory = true, HelpMessage = "The iOS policy Id.")]
+        [Parameter(Mandatory = true, HelpMessage = "The iOS policy name.")]
         [ValidateNotNullOrEmpty]
-        public string PolicyId { get; set; }
+        public string Name { get; set; }
 
         /// <summary>
         /// Gets or sets the App id
         /// </summary>
-        [Parameter(Mandatory = true, HelpMessage = "The iOS App Name to link to.")]
+        [Parameter(Mandatory = true, HelpMessage = "The iOS App Name to remove.")]
         [ValidateNotNullOrEmpty]
         public string AppName { get; set; }
 
@@ -50,29 +49,17 @@ namespace Microsoft.Azure.Commands.Intune
             {
                 this.ConfirmAction(
                     this.Force,
-                    "Are you sure you want to add App with name:" + this.AppName + " to iOS policy with id:" + this.PolicyId,
-                    "Link the app with iOS policy resource...",
-                    this.PolicyId,
+                    "Are you sure you want to remove App with name:" + this.AppName + " from iOS policy with name:" + this.Name,
+                    "Remove the app from iOS policy resource...",
+                    this.Name,
                     () =>
                     {
-                        this.IntuneClient.AddAppForiOSMAMPolicy(this.AsuHostName, this.PolicyId, this.AppName, PrepareMAMPolicyAppIdGroupIdPayload());
+                        this.IntuneClient.DeleteAppForiOSMAMPolicy(this.AsuHostName, this.Name, this.AppName);
                         this.WriteObject("Operation completed successfully");
                     });
             };
 
             base.SafeExecutor(action);
-        }
-
-        private MAMPolicyAppIdOrGroupIdPayload PrepareMAMPolicyAppIdGroupIdPayload()
-        {
-            string appUri = string.Format("https://{0}/providers/Microsoft.Intune/locations/{1}/apps/{2}", this.IntuneClient.BaseUri.Host, this.AsuHostName, this.AppName);
-            var appIdPayload = new MAMPolicyAppIdOrGroupIdPayload();
-            appIdPayload.Properties = new MAMPolicyAppOrGroupIdProperties()
-            {
-                Url = appUri
-            };
-
-            return appIdPayload;
         }
     }
 }
